--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@ src/test_doc.txt
 .idea/modules.xml
 .idea/programming_basics_project.iml
 .idea/vcs.xml
+.vs/CMake Overview
+.vs/programming_basics_project/v16/.suo
